[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Pillar.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Bridge.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 384 )

[node name="Pillar" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 96, 256 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 192.0
margin_bottom = 640.0
color = Color( 0.74902, 0.858824, 0.772549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 475, 307 )
scale = Vector2( 29.3, 31.7 )

[node name="Bridge" parent="." instance=ExtResource( 2 )]
position = Vector2( 192, 0 )

[connection signal="body_entered" from="." to="." method="_on_Pillar_body_entered"]
[connection signal="initialize_bridge" from="." to="Bridge" method="_on_Pillar_initialize_bridge"]
[connection signal="terminate_bridge" from="." to="Bridge" method="_on_Pillar_terminate_bridge"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="landed" from="Bridge" to="." method="_on_Bridge_landed"]
